[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/game/silo.gd" id="1"]
[ext_resource type="Script" path="res://scripts/game/silo_sprite.gd" id="2"]
[ext_resource type="Script" path="res://scripts/game/reload_indicator.gd" id="3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 10.0

[node name="Silo" type="Node2D"]
script = ExtResource("1")

[node name="SiloSprite" type="Node2D" parent="."]
script = ExtResource("2")

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="ReloadIndicator" type="Node2D" parent="."]
visible = false
script = ExtResource("3")
